--- a/donation/templates/doctorsignup.html
+++ b/donation/templates/doctorsignup.html
@@ -111,9 +111,8 @@
     <!-- Sign Up form -->
     <div class="signup-container">
         <h2>Doctor Sign Up</h2>
-        <form method="post" action="doclogin">
-
-
+        <form method="post" action="{% url 'doclogin' %}">
+      
             {% csrf_token %}
             <label for="username">Username</label>
             <input type="text" id="username" name="username" required>
