--- a/donation/templates/recipientsignup.html
+++ b/donation/templates/recipientsignup.html
@@ -111,7 +111,8 @@
     <!-- Sign Up form -->
     <div class="signup-container">
         <h2>Recipient Sign Up</h2>
-        <form method="post" action="reclogin">
+        <form method="post" action="{% url 'reclogin' %}">
+
             {% csrf_token %}
             <label for="username">Username</label>
             <input type="text" id="username" name="username" required>
