--- a/donation/templates/home.html
+++ b/donation/templates/home.html
@@ -58,7 +58,7 @@
         <h2>Why Organ Donation Matters</h2>
         <p>Organ donation is a life-saving gift. Thousands of people die every year waiting for an organ transplant. By registering as an organ donor, you can help save up to eight lives. Donated organs can include the heart, lungs, liver, kidneys, and pancreas.</p>
         <div class="awareness-content">
-            <img src="{% static 'images/bkimage1.jpg' %}" alt="Organ Donation Awareness" class="img-fluid">
+            <img src="{% static 'images/background.jpg' %}" alt="Organ Donation Awareness" class="img-fluid">
             <div class="awareness-details">
                 <h3>Did You Know?</h3>
                 <ul>
