--- a/donation/templates/success_stories.html
+++ b/donation/templates/success_stories.html
@@ -50,21 +50,17 @@
         }
     </style>
 </head>
-<body> 
+<body>
 
 <header>
     <h1>Success Stories</h1>
 </header>
-    <!-- Navigation bar with Home link -->
-    <div class="navbar">
-        <a class="nav-link" href="{% url 'home' %}">Home</a>
-    </div>
 
 <div class="container">
     <h2>Inspiring Stories from Donors and Recipients</h2>
 
     <div class="story">
-        <img src="{% static 'images/success_story1.jpg' %}" alt="John's Success Story">
+        <img src="{% static 'images/success_story_1.jpg' %}" alt="John's Success Story">
         <div>
             <h3>John's Journey</h3>
             <p>After receiving a kidney transplant from a living donor, John is now leading a healthy and active life. He advocates for organ donation and encourages others to consider donating.</p>
@@ -72,7 +68,7 @@
     </div>
 
     <div class="story">
-        <img src="{% static 'images/success_story3.jpg' %}" alt="Emma's Success Story">
+        <img src="{% static 'images/success_story_2.jpg' %}" alt="Emma's Success Story">
         <div>
             <h3>Emma's New Heart</h3>
             <p>Emma received a heart transplant and has been able to return to her passion for running. She shares her story to raise awareness about the importance of organ donation.</p>
@@ -80,7 +76,7 @@
     </div>
 
     <div class="story">
-        <img src="{% static 'images/success_story2.jpg' %}" alt="Mike's Journey">
+        <img src="{% static 'images/success_story_3.jpg' %}" alt="Mike's Journey">
         <div>
             <h3>Mike's Second Chance</h3>
             <p>Mike was diagnosed with liver failure and received a transplant that changed his life. He now volunteers with local organizations to support other transplant patients.</p>
